--- a/forum/index.html
+++ b/forum/index.html
@@ -6,15 +6,14 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Dev & Prod - разработка приложений и сайтов</title>
-    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
     <link rel="stylesheet" href="../css/foundation.min.css">
     <link rel="stylesheet" href="../css/case.css">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
-    <link rel="manifest" href="./site.webmanifest">
-    <link rel="mask-icon" href="./safari-pinned-tab.svg" color="#e85672">
+    <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
+    <link rel="manifest" href="../site.webmanifest">
+    <link rel="mask-icon" href="../safari-pinned-tab.svg" color="#e85672">
     <meta name="msapplication-TileColor" content="#e85672">
     <meta name="theme-color" content="#ffffff">
 
@@ -61,7 +60,7 @@
     <header class="row expanded">
         <div class="slide grad-bg">
             <div class="small-12 row block relative">
-                <svg class="hero-logo" viewBox="0 0 251 243" xmlns="http://www.w3.org/2000/svg">
+                <svg height="auto" class="hero-logo" viewBox="0 0 251 243" xmlns="http://www.w3.org/2000/svg">
                     <path d="M102.364 28.55V0H142v243h-39.636v-27.09a48.091 48.091 0 0 1-2.486-.096C14.63 210.372 0 174.968 0 117.783 0 60.766 24.905 32.697 102.364 28.55zm0 150.253c-47.053-6.24-52.265-27.799-52.265-58.572 0-30.287 7.957-49.517 52.265-54.718v113.29zm97.278-76.89C196.18 81.928 184.745 70.549 153 66.247V29.065c74.037 4.945 98 33.017 98 88.965 0 56.778-14.413 92.08-98 97.902v-37.457c32.66-4.99 43.36-17.196 46.623-36.893H165.9v-39.67h33.742z" fill="#000" fill-rule="evenodd" fill-opacity=".1" id="bg-logo"/>
                 </svg>
                 <img class="hero-mock medium-rm small-rm" src="../media/Mockup/Forum.png" alt="Forum">
@@ -102,7 +101,7 @@
         <div class="small-12 row block">
             <h4>
                 <img class="info-logo" src="../media/PortfolioLogos/Forum.png" alt="Forum">
-                В октябре 2016 года планировалось проведение первого Форума эндаумент-фондов. Нашей задачей стала разработка сайта-визитки мероприятия. Заказчик рассчитывал на ранний запуск, чтобы привлечь аудиторию и включать адрес сайта в информационные рассылки и полиграфическую продукцию.
+                В октябре 2016 года планировалось проведение первого Форума эндаумент-фондов. Нашей задачей стала разработка сайта-визитки мероприятия. Заказчик рассчитывал на ранний запуск, чтобы привлечь аудиторию и включать адрес сайта в информационные рассылки и полиграфическую продукцию.
             </h4>
         </div>
     </section>
@@ -302,13 +301,13 @@
                 <div class="space-2"></div>
                 <div id="submit-success" class="form-back all-center">
                     <div id="success-info" style="margin-top: -40px">
-                        <img class="success" src="./media/success.png" alt="Успешно">
+                        <img class="success" src="../media/success.png" alt="Успешно">
                         <div class="space-2"></div>
                         <h3 class="">Спасибо за заявку</h3>
                         <h4 class="">Мы свяжемся с вами в ближайшее время</h4>
                     </div>
                     <div id="error-info" class="remove" style="margin-top: -40px">
-                        <img class="success" src="./media/error.png" alt="Ошибка">
+                        <img class="success" src="../media/error.png" alt="Ошибка">
                         <div class="space-2"></div>
                         <h3 class="">Произошла ошибка</h3>
                         <h4 class="">Попробуйте связаться через наши контакты</h4>
@@ -340,7 +339,7 @@
                     <a href="http://blog.devandprod.ru" target="_blank"><p class="bold">blog.devandprod.ru</p></a>
                 </div>
                 <div class="columns small-12 medium-10 end">
-                    <img src="./media/dap_static.png" alt="DAP" class="logo-s-footer">
+                    <img src="../media/dap_static.png" alt="DAP" class="logo-s-footer">
                     <p class="translucent text-center">© Dev &amp Prod 2018</p>
                 </div>
             </div>
