Update iframe links

--- a/forum/index.html
+++ b/forum/index.html
@@ -83,7 +83,7 @@
                             <ul class="navigation small-rm">
                                 <li><a href="../#about">О нас</a></li>
                                 <li><a href="../#portfolio">Портфолио</a></li>
-                                <li><a href="../#contact">Контакты</a></li>
+                                <li><a href="#contact">Контакты</a></li>
                             </ul>
                             <a href="#contact" class="button header small-rm">Заказать услуги</a>
                             <a href="#contact" class="button header medium-rm large-rm">Заказать</a>
@@ -91,7 +91,7 @@
                         <ul class="navigation medium-rm large-rm">
                             <li><a href="../#about">О нас</a></li>
                             <li><a href="../#portfolio">Портфолио</a></li>
-                            <li><a href="../#contact">Контакты</a></li>
+                            <li><a href="#contact">Контакты</a></li>
                         </ul>
                     </div>
                 </div>
@@ -174,7 +174,7 @@
             <div class="iphone-wrapper">
                 <div class="iphone">
                     <div class="screen">
-                        <iframe src="./index.html" frameborder="0"></iframe>
+                        <iframe src="http://forum.devandprod.ru" frameborder="0"></iframe>
                     </div>
                     <img src="../media/iPhone-frame.png" alt="iPhone">
                 </div>
@@ -209,7 +209,7 @@
             <div class="imac-wrapper">
                     <div class="imac">
                         <div class="screen">
-                            <iframe src="./index.html" frameborder="0"></iframe>
+                            <iframe src="http://forum.devandprod.ru" frameborder="0"></iframe>
                         </div>
                         <img src="../media/iMac-frame.png" alt="iMac">
                     </div>
