New about block

--- a/index.html
+++ b/index.html
@@ -81,10 +81,15 @@
             </div>
         </div>
     </header>
-    <section id="about">
-        <div class="small-12 row block">
-            <h2>Чем мы занимаемся?</h2>
-            <h4  class="simply-text">Разрабатываем мобильные приложения, корпоративные сайты, интернет-магазины, порталы и сервисы. Мы автоматизируем бизнес-процессы и выпускаем продукты под нужды наших клиентов.</h4>
+    <section id="about" class="no-pd no-overflow">
+        <div class="small-12 row block relative">
+            <div class="columns small-4 small-rm medium-rm">
+                <img class="info-img" src="./media/what-we-do.png" alt="What we do?">
+            </div>
+            <div class="columns small-12 medium-12 large-8 info-text-wrapper">
+                <h2>Чем мы занимаемся?</h2>
+                <h4  class="simply-text">Разрабатываем мобильные приложения, корпоративные сайты, интернет-магазины, порталы и сервисы. Мы автоматизируем бизнес-процессы и выпускаем продукты под нужды наших клиентов.</h4>
+            </div>
         </div>
     </section>
     <section id="how" class="gray">
