Update forum case

--- a/forum/index.html
+++ b/forum/index.html
@@ -136,7 +136,7 @@
             <div class="small-12 columns no-pd infoblock-wrapper">
                 <div class="small-12 medium-7 columns"></div>
                 <div class="small-12 medium-12 large-5 columns no-pd">
-                    <div class="img-mask grad-bg infoblock js-tilt">
+                    <div class="img-mask grad-bg infoblock js-tilt level-1">
                         <p class="no-mg">
                             Важнейшим элементом сайта конференции являлось расписание - оно должно быть легко читаемым для тех, кто хочет выяснить общую повестку мероприятия, достаточно подробным, чтобы по нему можно было ориентироваться, а так же хорошо выглядеть как на больших мониторах, так и на экранах телефонов.
                         </p>
@@ -145,7 +145,7 @@
             </div>
 
             <div class="small-12 medium-12 large-9 columns end no-pd">
-                <div class="img-mask js-tilt"><img src="../media/forum/forum-2.jpg" alt="Forum"></div>
+                <div class="img-mask level-0"><img src="../media/forum/schedule.png" alt="Forum"></div>
             </div>
         </div>
     </section>
@@ -174,7 +174,7 @@
             <div class="iphone-wrapper">
                 <div class="iphone">
                     <div class="screen">
-                        <iframe src="http://forum.devandprod.ru" frameborder="0"></iframe>
+                        <iframe src="https://forum.devandprod.ru" frameborder="0"></iframe>
                     </div>
                     <img src="../media/iPhone-frame.png" alt="iPhone">
                 </div>
@@ -209,7 +209,7 @@
             <div class="imac-wrapper">
                     <div class="imac">
                         <div class="screen">
-                            <iframe src="http://forum.devandprod.ru" frameborder="0"></iframe>
+                            <iframe src="https://forum.devandprod.ru" frameborder="0"></iframe>
                         </div>
                         <img src="../media/iMac-frame.png" alt="iMac">
                     </div>
@@ -226,7 +226,7 @@
     <section id="result" class="secondary">
         <div class="small-12 row block">
             <h2 class="text-center">
-                Готовый сайт: <a href="http://forum.devandprod.ru">forum.devandprod.ru</a>
+                Готовый сайт: <a href="https://forum.devandprod.ru">forum.devandprod.ru</a>
             </h2>
         </div>
     </section>
