--- a/mipt/index.html
+++ b/mipt/index.html
@@ -56,17 +56,25 @@
     <noscript><div><img src="https://mc.yandex.ru/watch/49127821" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
     <!-- /Yandex.Metrika counter -->
 </head>
-<body id="forum">
+<body id="mipt">
     <header class="row expanded">
         <div class="slide grad-bg">
             <div class="small-12 row block relative">
-                <svg height="auto" class="hero-logo" viewBox="0 0 251 243" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M102.364 28.55V0H142v243h-39.636v-27.09a48.091 48.091 0 0 1-2.486-.096C14.63 210.372 0 174.968 0 117.783 0 60.766 24.905 32.697 102.364 28.55zm0 150.253c-47.053-6.24-52.265-27.799-52.265-58.572 0-30.287 7.957-49.517 52.265-54.718v113.29zm97.278-76.89C196.18 81.928 184.745 70.549 153 66.247V29.065c74.037 4.945 98 33.017 98 88.965 0 56.778-14.413 92.08-98 97.902v-37.457c32.66-4.99 43.36-17.196 46.623-36.893H165.9v-39.67h33.742z" fill="#000" fill-rule="evenodd" fill-opacity=".1" id="bg-logo"/>
-                </svg>
-                <img class="hero-mock medium-rm small-rm" src="../media/Mockup/Forum.png" alt="Forum">
+            <!-- TODO: minificate svg -->
+            <svg height="auto" class="hero-logo" viewBox="0 0 218 209" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                <defs></defs>
+                <g id="Symbols" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                    <g id="Media/Portfolio/MIPT_back" transform="translate(-41.000000, -46.000000)" fill="#4674B8" fill-rule="nonzero">
+                        <g id="Group">
+                            <path d="M203.31989,46 L193.84456,99.7021429 C197.949676,102.051612 237.116095,131.510335 221.728365,171.218939 L221.547637,171.941852 L221.728365,171.218939 C211.169133,199.020429 186.260519,218.828472 156.795246,222.855615 L156.795246,222.855615 L174.093532,124.074654 C174.083399,119.794352 171.433926,115.963913 167.432401,114.444414 C165.140097,113.6053 162.624661,113.6053 160.332358,114.444414 L102.757464,135.951089 L115.227722,64.6150216 C115.217588,60.3347199 112.568116,56.504281 108.56659,54.9847816 C106.274287,54.1456677 103.758851,54.1456677 101.466547,54.9847816 L43.8658355,76.5172754 L41,93.5573784 L73.7118341,80.8031195 L43.0138304,254.792899 C43.0138304,254.792899 77.4296748,250.300508 82.5933424,249.474321 L99.6076271,152.991192 L132.448553,140.082023 L114.040078,245.343387 C114.040078,245.343387 148.378467,240.928451 153.697045,240.179719 L153.697045,240.179719 C207.321733,231.866215 250.360902,199.670747 258.00313,144.187139 C267.710825,73.5481666 203.31989,46 203.31989,46 Z" id="Shape"></path>
+                        </g>
+                    </g>
+                </g>
+            </svg>
+                <img class="hero-mock medium-rm small-rm" src="../media/Mockup/MIPT.png" alt="Mipt">
                 <div class="relative">
-                    <h1>Упаковка мероприятия</h1>
-                    <h4>Как сделать информативную и красивую визитку для конференции</h4>
+                    <h1>Сайт для фонда МФТИ</h1>
+                    <h4>Как автоматизировать сбор средств увеличив пожертвования</h4>
                     <div class="space-2"></div>
                     <a href="#about" class="button border">Подробнее</a>
                 </div>
@@ -100,30 +108,30 @@
     <section id="about" class="secondary">
         <div class="small-12 row block">
             <h4>
-                <img class="info-logo" src="../media/PortfolioLogos/Forum.png" alt="Forum">
-                В октябре 2016 года планировалось проведение первого Форума эндаумент-фондов. Нашей задачей стала разработка сайта-визитки мероприятия. Заказчик рассчитывал на ранний запуск, чтобы привлечь аудиторию и включать адрес сайта в информационные рассылки и полиграфическую продукцию.
+                <img class="info-logo" src="../media/PortfolioLogos/MIPT.png" alt="Mipt">
+                Эндаумент фонд МФТИ решил, что вести свою деятельность на основном сайте института более нецелесообразно. Затрудненный процесс обновления контента и создания нового, отсутствие гибкого инструмента отслеживания пожертвований - краткий лист проблем, которые Фонду предстояло решить с нашей помощью. Эндаументу был нужен универсальный инструмент. За разработку такого сайта для наших заказчиков из МФТИ мы и взялись осенью 2017 года.
             </h4>
         </div>
     </section>
     <section id="design" class="slider-wrapper">
         <div class="small-12 row block">
-            <h2 class="text-center">Дизайн</h2>
+            <h2 class="text-center">Конструктор</h2>
             <h4>
-                Главным вызовом в разработке этого сайта было создание дизайна. Среди заявленных спикеров конференции были заместитель председателя правительства Аркадий Дворкович, министр образования Дмитрий Ливанов и ректор НИТУ "МИСиС" Алевтина Черникова, что задавало планку для дизайна сайта и предполагало "статусность".
+                Мы создали для Физтехов удобный инструмент для сборки страниц по принципу "что видишь, то и получишь" – из блоков нашего контентного процессора в пару кликов собираются страницы новостей, событий, релизов новых проектов и для этого редакторам сайта не приходится осваивать HTML и CSS - с созданием живой страницы, отвечающей бренду Фонда, легко справляются люди, не являющиеся профессионалами в области веб-дизайна.
             </h4>
             <div class="slider">
                 <div>
-                    <img src="../media/forum/forum-1.jpg" alt="Forum">
+                    <img src="../media/mipt/mipt-admin-blocks.jpg" alt="Mipt">
                 </div>
                 <div>
-                    <img src="../media/forum/forum-2.jpg" alt="Forum">
+                    <img src="../media/mipt/mipt-admin-pages.jpg" alt="Mipt">
                 </div>
                 <div>
-                    <img src="../media/forum/forum-3.jpg" alt="Forum">
+                    <img src="../media/mipt/mipt-donations.jpg" alt="Mipt">
                 </div>
             </div>
             <h4>
-                От дизайна требовалось быть переиспользуемым - именно нам доверили сформировать визуальный стиль Форума, которому впоследствии соответствовали бы атрибутика и печатные материалы.
+                Кроме мощной системы создания веб-страниц Фонд получил возможность собирать пожертвования пользователей на разные целевые капиталы, привязанные к разным банковским счетам, а так же неограниченно подключать новые. Для создание нового целевого капитала администратору нужен только логин и пароль от нового счета в банке-эквайере – и доноры Фонда смогут в 2 клика жертвовать деньги на новые проекты, не задумываясь о сложных путях маршрутизации их финансов. Несмотря на кажущуюся простоту Фонд получил единый интерфейс для отслеживания платежей по всем Целевым Капиталам.
             </h4>
         </div>
     </section>
@@ -138,23 +146,23 @@
                 <div class="small-12 medium-12 large-5 columns no-pd">
                     <div class="img-mask grad-bg infoblock js-tilt level-1">
                         <p class="no-mg">
-                            Важнейшим элементом сайта конференции являлось расписание - оно должно быть легко читаемым для тех, кто хочет выяснить общую повестку мероприятия, достаточно подробным, чтобы по нему можно было ориентироваться, а так же хорошо выглядеть как на больших мониторах, так и на экранах телефонов.
+                            Для создания такой интуитивной в использовании работниками Фонда системы управления пожертвованиями, мы тесно сотрудничали с техническими специалистами РосЕвроБанк и интегрировали нашу систему с техническими решениями банка-эквайера.
                         </p>
                     </div>
                 </div>
             </div>
 
             <div class="small-12 medium-12 large-9 columns end no-pd">
-                <div class="img-mask level-0"><img src="../media/forum/schedule.png" alt="Forum"></div>
+                <div class="img-mask level-0"><img src="../media/mipt/mipt-form.jpg" alt="Mipt"></div>
             </div>
         </div>
     </section>
     <section id="mobile">
         <svg class="bg-decor" height="auto" viewBox="0 0 3240 731" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <defs>
-                <linearGradient x1="21.507%" y1="100%" x2="71.025%" y2="4.337%" id="b">
-                <stop stop-color="#027F7E" offset="0%"/>
-                <stop stop-color="#49DE9C" offset="100%"/>
+                <linearGradient x1="76.029253%" y1="8.15688045%" x2="25.6806014%" y2="100%" id="b">
+                    <stop stop-color="#4E81CC" offset="0%"></stop>
+                    <stop stop-color="#292878" offset="100%"></stop>
                 </linearGradient>
                 <path d="M900 382.987c955.15 133.416 774.257-463.155 1440-298.8 557.465 137.624 226.584 523.341 900 523.341-659.344 180.693-524.619-183.342-900-258.64-412.657-82.776-380.022 510.85-1440 355.133C346.587 622.72 381.086 8.38 0 8.38c386.914-69.268 449.962 311.745 900 374.606z" id="a"/>
             </defs>
@@ -164,17 +172,25 @@
             <div class="small-12 medium-6 columns no-pd">
                 <h2>Мобильная версия</h2>
                 <h4>
-                        Сделали удобную адаптивнцю версию сайта чтобы на ней хорошо отображалось расписание, так как это одна из главных частей сайта. При этом не забыли и про другие разделы 
+                    Сделали удобную адаптивнцю версию сайта чтобы на ней хорошо отображалось расписание, так как это одна из главных частей сайта. При этом не забыли и про другие разделы 
                 </h4>
             </div>
-            <svg class="mobile-logo small-rm medium-rm" width="300" height="300" viewbox="0 0 251 243" xmlns="http://www.w3.org/2000/svg">
-                <path d="M102.364 28.55V0H142v243h-39.636v-27.09a48.09 48.09 0 0 1-2.486-.096C14.63 210.372 0 174.968 0 117.783 0 60.766 24.905 32.697 102.364 28.55zm0 150.253c-47.053-6.24-52.265-27.799-52.265-58.572 0-30.287 7.957-49.517 52.265-54.718v113.29zm97.278-76.89C196.18 81.928 184.745 70.549 153 66.247V29.065c74.037 4.945 98 33.017 98 88.965 0 56.778-14.413 92.08-98 97.902v-37.457c32.66-4.99 43.36-17.196 46.623-36.893H165.9v-39.67h33.742z" fill="#000" fill-rule="evenodd" fill-opacity=".1"/>
+            <!-- TODO: minificate svg -->
+            <svg class="mobile-logo small-rm medium-rm" viewBox="0 0 218 209" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                <defs></defs>
+                <g id="Symbols" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                    <g id="Media/Portfolio/MIPT_back" transform="translate(-41.000000, -46.000000)" fill="#4674B8" fill-rule="nonzero">
+                        <g id="Group">
+                            <path d="M203.31989,46 L193.84456,99.7021429 C197.949676,102.051612 237.116095,131.510335 221.728365,171.218939 L221.547637,171.941852 L221.728365,171.218939 C211.169133,199.020429 186.260519,218.828472 156.795246,222.855615 L156.795246,222.855615 L174.093532,124.074654 C174.083399,119.794352 171.433926,115.963913 167.432401,114.444414 C165.140097,113.6053 162.624661,113.6053 160.332358,114.444414 L102.757464,135.951089 L115.227722,64.6150216 C115.217588,60.3347199 112.568116,56.504281 108.56659,54.9847816 C106.274287,54.1456677 103.758851,54.1456677 101.466547,54.9847816 L43.8658355,76.5172754 L41,93.5573784 L73.7118341,80.8031195 L43.0138304,254.792899 C43.0138304,254.792899 77.4296748,250.300508 82.5933424,249.474321 L99.6076271,152.991192 L132.448553,140.082023 L114.040078,245.343387 C114.040078,245.343387 148.378467,240.928451 153.697045,240.179719 L153.697045,240.179719 C207.321733,231.866215 250.360902,199.670747 258.00313,144.187139 C267.710825,73.5481666 203.31989,46 203.31989,46 Z" id="Shape"></path>
+                        </g>
+                    </g>
+                </g>
             </svg>
             <div class="small-12 medium-6 columns no-pd">
             <div class="iphone-wrapper">
                 <div class="iphone">
                     <div class="screen">
-                        <iframe src="https://forum.devandprod.ru" frameborder="0"></iframe>
+                        <iframe src="https://fund.mipt.ru" frameborder="0"></iframe>
                     </div>
                     <img src="../media/iPhone-frame.png" alt="iPhone">
                 </div>
@@ -186,47 +202,32 @@
     <section id="realisation" class="no-pd">
         <div class="small-12 row block">
             <h4>
-                Заказчик предупредил о возможных частых изменениях в программе мероприятия, составе спикеров и даже контактной информации, поэтому главным вызовом при вёрстке была декомпозиция разметки страницы и её данных. Для удобства внесения правок в указанные блоки мы решили не использовать замедляющие работу сайта базы данных, а хранить данные в JSON-файле, динамически подгружавшемся сайтом при загрузке страницы. При этом данные, влияющие на индексацию сайта в поисковых системах, остались в разметке.
-                <br/>
-                <br/>
-                В серверной части сайта был реализован функционал отправки писем о регистрации на Форум. Информация о регистрации приходила на почтовый ящик заказчика, предварительно проходя валидацию для отсеивания некорректно сформированных писем: без имени и контактных данных.
+                Как настоящий универсальный инструмент сайт Фонда был спроектирован легко расширяемым – раз в несколько месяцев мы получаем заказ от Фонда на реализацию новых бизнес сценариев. Одним из совместно с нами реализованных проектов Эндаумента стал "Полный спектр доноров", который мы без труда внедрили в уже работающую и отлаженную систему. Анонс данного проекта был сделан на встрече с ректором 14 июня 2018 года.
+                <img class="fw-img" src="../media/mipt/mipt-spectrum.png" alt="Шкала «Полного спектра доноров»">
             </h4>
         </div>
     </section>
-    <section id="desktop" class="small-rm no-pd">
-        <svg class="bg-decor" height="auto" viewBox="0 0 3240 466" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-            <defs>
-              <linearGradient x1="20.546%" y1="100%" x2="74.785%" y2="5.732%" id="b1">
-                <stop stop-color="#027F7E" offset="0%"/>
-                <stop stop-color="#49DE9C" offset="100%"/>
-              </linearGradient>
-              <path d="M900 166.608c465.36 154.13 933.038-186.976 1440 118.962 396.946 260.685 728.237 155.885 900-23.119-215.172 283.804-632.88 300.938-900 143.75-351.417-193.098-883.815 297.714-1440 140.054-534.268-192.17-682.768-140.053-900 0C141.803 262.451 464.33-6.357 900 166.608z" id="a1"/>
-            </defs>
-            <use fill="url(#b1)" xlink:href="#a1" transform="translate(0 -112)" fill-rule="evenodd"/>
-        </svg>
+    <section id="stats" class="stats-block">
         <div class="small-12 row block">
-            <div class="space-3"></div>
-            <div class="imac-wrapper">
-                    <div class="imac">
-                        <div class="screen">
-                            <iframe src="https://forum.devandprod.ru" frameborder="0"></iframe>
-                        </div>
-                        <img src="../media/iMac-frame.png" alt="iMac">
-                    </div>
-                </div>
-            </div>
+            <h2 class="text-center">Немного статистики</h2>
+            <h4>
+                По сравнению со старой весрсией сайта... это текст про статистику и результаты которых мы добились про статистику и результаты которых мы добились вместе
+                <img class="fw-img small-rm" src="../media/mipt/mipt-stats.png" alt="Статистика">
+                <img class="fw-img medium-rm large-rm" src="../media/mipt/mipt-stats-mobile.png" alt="Статистика">
+            </h4>
+        </div>
     </section>
-    <section id="conclusion" class="">
+    <section id="conclusion">
         <div class="small-12 row block">
             <h4>
-                Форум не был проведён из-за организационных проблем, однако сайт был разработан и введён в эксплуатацию за один месяц, полностью удовлетворив исходные требования. 
+                    Мы продолжаем сотрудничество с Эндаументом МФТИ в рамках гарантийной поддержки и новых совместных проектов.
             </h4>
         </div>
     </section>
     <section id="result" class="secondary">
         <div class="small-12 row block">
             <h2 class="text-center">
-                Готовый сайт: <a href="https://forum.devandprod.ru">forum.devandprod.ru</a>
+                Готовый сайт: <a href="https://fund.mipt.ru">fund.mipt.ru</a>
             </h2>
         </div>
     </section>
