Add hero preloader

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 </head>
 <body>
     <header class="row expanded">
-        <div class="slide dark-bg">
+        <div id="hero" class="slide dark-bg not-loaded">
             <div class="top-absolute">
                 <div class="small-12 row">
                     <img src="./media/dap_logo.gif" alt="DAP" class="logo-s">
@@ -69,10 +69,12 @@
                 </div>
             </div>
             <div class="small-12 row block">
-                <h1>Мобильные приложения и&nbsp;сайты</h1>
-                <h4>Разработка и автоматизация для стартапов и бизнеса</h4>
+                <h1 class="hero-content delay-1">Мобильные приложения и&nbsp;сайты</h1>
+                <h4 class="hero-content delay-2">Разработка и автоматизация для стартапов и бизнеса</h4>
                 <div class="space-2"></div>
-                <a href="#contact" class="button big" onclick="yaCounter49127821.reachGoal('CALL_TO_ACTION'); return true;">Заказать услуги</a>
+                <div class="hero-content delay-3">
+                    <a href="#contact" class="button big" onclick="yaCounter49127821.reachGoal('CALL_TO_ACTION'); return true;">Заказать услуги</a>
+                </div>
             </div>
             <div class="scroll-down">
                 <a href="#about">
