SEO  optimisation by keyword "DAP"

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Dev & Prod - разработка приложений и сайтов</title>
+    <title>DAP - разработка приложений и сайтов</title>
     <link rel="stylesheet" href="./css/foundation.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -20,10 +20,10 @@
     <meta property="og:image:height" content="649">
     <meta property="og:url" content="devandprod.ru">
     <meta property="og:image" content="http://devandprod.ru/media/og-image.jpg">
-    <meta property="og:description" content="Мы воплощаем в код ваши идеи для бизнеса.
+    <meta property="og:description" content="DAP - Мы воплощаем в код ваши идеи для бизнеса.
 
     Разрабатываем мобильные приложения, корпоративные сайты, интернет-магазины, порталы и сервисы. Мы автоматизируем бизнес-процессы и выпускаем продукты под нужды наших клиентов.">
-    <meta property="og:title" content="Разработка и продакшн">
+    <meta property="og:title" content="DAP - Разработка и продакшн">
 
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript" >
@@ -60,7 +60,7 @@
         <div id="hero" class="slide dark-bg not-loaded">
             <div class="top-absolute">
                 <div class="small-12 row">
-                    <img src="./media/dap_logo.gif" alt="DAP" class="logo-s">
+                    <img src="./media/dap_logo.gif" alt="DAP - разработка мобильных приложений и сайтов" class="logo-s">
                     <ul class="navigation">
                         <li><a href="#about" onclick="yaCounter49127821.reachGoal('CLICK_ABOUT'); return true;">О нас</a></li>
                         <li><a href="#portfolio" onclick="yaCounter49127821.reachGoal('CLICK_PORTFOLIO'); return true;">Портфолио</a></li>
@@ -86,7 +86,7 @@
     <section id="about" class="no-pd no-overflow">
         <div class="small-12 row block relative">
             <div class="columns small-4 small-rm medium-rm">
-                <img class="info-img" src="./media/what-we-do.png" alt="What we do?">
+                <img class="info-img" src="./media/what-we-do.png" alt="DAP - Что мы умеем?">
             </div>
             <div class="columns small-12 medium-12 large-8 info-text-wrapper">
                 <h2>Чем мы занимаемся?</h2>
@@ -102,16 +102,16 @@
         </div>
         <div class="small-12 row">
             <div class="columns small-12 medium-4">
-                <img class="tetris-block" src="./media/tetris/t.png" alt="Составление ТЗ">
+                <img class="tetris-block" src="./media/tetris/t.png" alt="DAP - Cоставление технического задания">
                 <div class="space-2 small-rm"></div>
                 <h3>Составление ТЗ</h3>
                 <p>
-                    Наша команда берёт на себя заботы по формированию технического задания, анализирует предметную область и выстраивает простую коммуникацию для всех участников проекта.
+                    Команда <b>DAP</b> берёт на себя заботы по формированию технического задания, анализирует предметную область и выстраивает простую коммуникацию для всех участников проекта.
                 </p>
             </div>
             <div class="columns small-12 medium-4">
                 <div class="space-2 medium-rm large-rm"></div>
-                <img class="tetris-block" src="./media/tetris/s.png" alt="Разработка">
+                <img class="tetris-block" src="./media/tetris/s.png" alt="DAP - Разработка">
                 <div class="space-2 small-rm"></div>
                 <h3>Разработка</h3>
                 <p>
@@ -120,7 +120,7 @@
             </div>
             <div class="columns small-12 medium-4">
                 <div class="space-2 medium-rm large-rm"></div>
-                <img class="tetris-block" src="./media/tetris/o.png" alt="Гарантия">
+                <img class="tetris-block" src="./media/tetris/o.png" alt="DAP - Гарантия">
                 <div class="space-2 small-rm"></div>
                 <h3>Гарантия</h3>
                 <p>
@@ -135,7 +135,7 @@
     <section id="portfolio">
         <div class="small-12 medium-6 row block">
             <h2>Портфолио</h2>
-            <p>Чтобы держать руку на пульсе индустрии, DAP занимается разработкой как коммерческих, так и собственных продуктов</p>
+            <p>Чтобы держать руку на пульсе индустрии, <b>DAP</b> занимается разработкой как коммерческих, так и собственных продуктов</p>
         </div>
         <div class="space-1 medium-rm small-rm"></div>
         <div class="select-wrapper">
@@ -205,7 +205,7 @@
             <div class="space-1 large-rm"></div>
             <div class="small-12 row">
                 <div class="columns small-12 medium-4">
-                    <img class="preference-icon" src="./media/icon/employee.png" alt="Смелость">
+                    <img class="preference-icon" src="./media/icon/employee.png" alt="DAP - Смелость">
                     <h3>Смелость</h3>
                     <p>
                         Мы можем и хотим взяться за решение нестандартных бизнес-задач, автоматизировать те процессы, для которых нет готовых решений, давать бизнесам инструменты, которых у них нет.
@@ -213,15 +213,15 @@
                 </div>
                 <div class="columns small-12 medium-4">
                     <div class="space-2 medium-rm large-rm"></div>
-                    <img class="preference-icon" src="./media/icon/quality.png" alt="Надежность">
+                    <img class="preference-icon" src="./media/icon/quality.png" alt="DAP - Надежность">
                     <h3>Надежность</h3>
                     <p>
-                        Наши методики ведения проектов позаимствованы у ведущих российских продуктовых IT-компаний. Мы умеем доводить наши продукты до релиза в срок благодаря тщательному планированию и организации работы.
+                        Наши методики ведения проектов позаимствованы у ведущих российских продуктовых IT-компаний. Мы в <b>DAP</b> умеем доводить наши продукты до релиза в срок благодаря тщательному планированию и организации работы.
                     </p>
                 </div>
                 <div class="columns small-12 medium-4">
                     <div class="space-2 medium-rm large-rm"></div>
-                    <img class="preference-icon" src="./media/icon/refund.png" alt="Доступность">
+                    <img class="preference-icon" src="./media/icon/refund.png" alt="DAP - Доступность">
                     <h3>Доступность</h3>
                     <p>
                             Даже малый бизнес и стартапы, не обладающие бюджетами для приобретения дорогих систем, могут получить у нас инструменты исключительно под свои нужды. Никаких трюков, наше ценообразование полностью прозрачно.
@@ -267,7 +267,7 @@
                         <a href="http://blog.devandprod.ru" target="_blank"><p class="bold">blog.devandprod.ru</p></a>
                     </div>
                     <div class="columns small-12 medium-10 end">
-                        <img src="./media/dap_static.png" alt="DAP" class="logo-s-footer">
+                        <img src="./media/dap_static.png" alt="DAP - разработка мобильных приложений и сайтов" class="logo-s-footer">
                         <!-- <p class="translucent text-center">© Dev &amp Prod 2018</p> -->
                     </div>
                 </div>
@@ -338,7 +338,7 @@
                     <a href="http://blog.devandprod.ru" target="_blank"><p class="bold">blog.devandprod.ru</p></a>
                 </div>
                 <div class="columns small-12 medium-10 end">
-                    <img src="./media/dap_static.png" alt="DAP" class="logo-s-footer">
+                    <img src="./media/dap_static.png" alt="DAP - разработка мобильных приложений и сайтов" class="logo-s-footer">
                     <p class="translucent text-center">© Dev &amp Prod 2018</p>
                 </div>
             </div>
